--- a/views/index.html
+++ b/views/index.html
@@ -83,6 +83,9 @@
             data: $('#testForm').serialize(),
             success: function(data) {
               $('#jsonResult').text(JSON.stringify(data));
+            },
+            error: function(jqXHR, textStatus, errorThrown ) {
+              $('#jsonResult').text("ERROR: " + jqXHR.responseText);
             }
           });
           e.preventDefault();
@@ -94,6 +97,9 @@
             data: $('#testForm2').serialize(),
             success: function(data) {
               $('#jsonResult').text(JSON.stringify(data));
+            },
+            error: function(jqXHR, textStatus, errorThrown ) {
+              $('#jsonResult').text("ERROR: " + jqXHR.responseText);
             }
           });
           e.preventDefault();
@@ -105,6 +111,9 @@
             data: $('#testForm3').serialize(),
             success: function(data) {
               $('#jsonResult').text(JSON.stringify(data));
+            },
+            error: function(jqXHR, textStatus, errorThrown ) {
+              $('#jsonResult').text("ERROR: " + jqXHR.responseText);
             }
           });
           e.preventDefault();
