Final changes in index, userstories

--- a/views/issue.html
+++ b/views/issue.html
@@ -11,10 +11,10 @@
   </head>
   <body>
     <header>
-      <h1 id='projectTitle'></h1>
+      <h1 style="text-align:center" id="projectTitle"></h1>
     </header>
     <center>
-      <div id='submitNewIssue'>
+      <div id="submitNewIssue">
         <br>
         <h3>Submit a new issue:</h3>
         <form id="newIssue" method="post" action="/api/">
